# opencl-monte-carlo

./: .gitmodules  CMakeLists.txt  carlo.py  kernel.cl  main.cpp  prepare_sim.py
